--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img src="./static/linkedin.png" alt="linkedin logo" width="50px" height="50px">
       </a>
 
-      <a href="mailto:ologbonowiwi520@gmail.com" target="_blank">
+      <a href="mailto:me@wmatos.ninja" target="_blank">
         <img src="./static/gmail.png" alt="gmail logo" width="50px" height="50px">
       </a>
     </div>
