--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
       /* text montserrat black with white borders */
       font-family: 'Montserrat', sans-serif;
       color: black;
-      text-shadow: 1px 1px 1px white;
+      text-shadow: 1px 1px 1px gray;
     }
 
     .container {
-      background-image: url("./static/planet.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -34,7 +29,11 @@
     }
 
     body {
-      margin: 0;
+      background-image: url("./static/background.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
 
     .container .info>h1,
@@ -105,6 +104,14 @@
       <p>Created by Wesley Matos</p>
 
       <p>Icons by <a target="_blank" href="https://icons8.com">Icons8</a></p>
+      <p>
+        Background picture by <a
+          href="https://unsplash.com/@vincentiu?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          target="_blank">Vincentiu
+          Solomon</a> on <a
+          href="https://unsplash.com/photos/ln5drpv_ImI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          target="_blank">Unsplash</a>
+      </p>
     </footer>
   </div>
 </body>
