--- a/index.html
+++ b/index.html
@@ -87,6 +87,71 @@
       text-align: center;
       margin-bottom: 10px;
     }
+
+    /* Animation */
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translate3d(0, -100%, 0);
+      }
+
+      to {
+        opacity: 1;
+        transform: none;
+      }
+    }
+
+    @keyframes fadeInLeft {
+      from {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+      }
+
+      to {
+        opacity: 1;
+        transform: none;
+      }
+    }
+
+    @keyframes fadeInRight {
+      from {
+        opacity: 0;
+        transform: translate3d(10%, 0, 0);
+      }
+
+      to {
+        opacity: 1;
+        transform: none;
+      }
+    }
+
+    .container .anchors {
+      animation-duration: 1s;
+      animation-fill-mode: both;
+      animation-timing-function: ease-in-out;
+      animation: fadeInLeft 1s;
+    }
+
+    .container h1,
+    .container h2 {
+      animation-duration: 1s;
+      animation-fill-mode: both;
+      animation-timing-function: ease-in-out;
+      animation: fadeInDown 1s;
+    }
+
+    .container .credits {
+      animation-duration: 1s;
+      animation-fill-mode: both;
+      animation-timing-function: ease-in-out;
+      animation: fadeInRight 1s;
+    }
+
+    /* hide scrollbars */
+    ::-webkit-scrollbar {
+      display: none;
+    }
   </style>
 </head>
 
