--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="anchors">
       <!-- GitHub anchor -->
-      <a href="https://github.com/ologbonowiwi" target="_blank">
+      <a id="github" href="https://github.com/ologbonowiwi" target="_blank">
         <object type="image/svg+xml" data="./static/github.svg" width="50px" height="50px"></object>
       </a>
 
