fix: change objects to imgs
the anchor was not working because of the objects

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
     <div class="anchors">
       <!-- GitHub anchor -->
       <a id="github" href="https://github.com/ologbonowiwi" target="_blank">
-        <object type="image/svg+xml" data="./static/github.svg" width="50px" height="50px"></object>
+        <img src="./static/github.svg" alt="GitHub Logo">
       </a>
 
       <!-- LinkedIn anchor -->
       <a href="https://www.linkedin.com/in/ologbonowiwi/" target="_blank">
-        <object type="image/svg+xml" data="./static/linkedin.svg" width="50px" height="50px"></object>
+        <img src="./static/linkedin.svg" alt="LinkedIn Logo">
       </a>
 
+      <!-- E-mail anchor -->
       <a href="mailto:me@wmatos.ninja" id="gmail" target="_blank">
-        <object type="image/svg+xml" data="./static/gmail.svg" width="50px" height="50px"></object>
+        <img src="./static/gmail.svg" alt="Gmail Logo">
       </a>
     </div>
 
@@ -50,6 +51,7 @@
           target="_blank">Unsplash</a>
       </p>
     </footer>
+    </div>
   </div>
 </body>
 
