refactor: change files folders

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./static/animations.css">
-  <link rel="stylesheet" href="./static/styles.css">
+  <link rel="stylesheet" href="./css/animations.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -24,17 +24,17 @@
     <div class="anchors">
       <!-- GitHub anchor -->
       <a id="github" href="https://github.com/ologbonowiwi" target="_blank">
-        <img src="./static/github.svg" alt="GitHub Logo">
+        <img src="./public/github.svg" alt="GitHub Logo">
       </a>
 
       <!-- LinkedIn anchor -->
       <a href="https://www.linkedin.com/in/ologbonowiwi/" target="_blank">
-        <img src="./static/linkedin.svg" alt="LinkedIn Logo">
+        <img src="./public/linkedin.svg" alt="LinkedIn Logo">
       </a>
 
       <!-- E-mail anchor -->
       <a href="mailto:me@wmatos.ninja" id="gmail" target="_blank">
-        <img src="./static/gmail.svg" alt="Gmail Logo">
+        <img src="./public/gmail.svg" alt="Gmail Logo">
       </a>
     </div>
 
