--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </a>
 
       <!-- E-mail anchor -->
-      <a href="mailto:me@wmatos.ninja" id="gmail" target="_blank">
+      <a href="mailto:me@ologbonowiwi.tech" id="gmail" target="_blank">
         <img src="./public/gmail.svg" alt="Gmail Logo">
       </a>
     </div>
@@ -50,7 +50,7 @@
           href="https://unsplash.com/photos/ln5drpv_ImI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
           target="_blank">Unsplash</a>
       </p>
-    </footer>
+      </footer>
     </div>
   </div>
 </body>
