feat: add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/animations.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+  <link rel="manifest" href="public/site.webmanifest">
 </head>
 
 <body>
@@ -45,11 +49,11 @@
       <p>
         Background picture by <a
           href="https://unsplash.com/@vincentiu?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-          target="_blank">Vincentiu
-          Solomon</a> on <a
+          target="_blank">Vincentiu Solomon</a> on <a
           href="https://unsplash.com/photos/ln5drpv_ImI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
           target="_blank">Unsplash</a>
       </p>
+      <p>Favicon by NASA</p>
       </footer>
     </div>
   </div>
